# IA_OpenSource2

./: README.md  dockerfile  rationales.md
IA_OpenSource2/ia_opensource2/: main.py
ProyIA/: pyproject.toml
ProyIA/main/: main.py
ProyIA/tests/: test.py
montaje/Resources/figures/: readme.txt  vacio.txt
